[package]
edition      = "2024"
name         = "driver-64x64-pixel-matrix"
authors      = ["Theora59-dev"]
rust-version = "1.88"
version      = "0.2.0"
description  = "HUB75 RGB LED matrix driver for ESP32 (64x64, 1/32 scan)"
license      = "MIT"
repository   = "https://github.com/Theora59-dev/driver-hub75-64x64-pixel-matrix"
keywords     = ["esp32", "hub75", "led-matrix", "embedded", "no-std"]
categories   = ["embedded", "hardware-support"]

[dependencies]
embedded-hal = "1.0.0"

[dev-dependencies]
esp-hal                = { version = "~1.1.0", features = ["esp32"] }
esp-bootloader-esp-idf = { version = "0.5.0", features = ["esp32"] }
esp-println            = { version = "0.17.0", features = ["esp32"] }

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[profile.dev]
opt-level = "s"

[profile.release]
codegen-units = 1
debug         = 2
lto           = 'fat'
opt-level     = 's'
